tests/error/without_instance.gw
// [contains] cannot access member
class C {
  int i;
}

C.i;
